# ibex-geometry

./: .gitignore  .travis.yml  CMakeLists.txt  MANIFEST.in  README.md  appveyor.yml  build_Ibex4pyIbex.sh  setup.py
CMakeModules/: Findpybind11.cmake
pyibex_geometry/tests/: test_polar.py  test_polygon.py
python/: CMakeLists.txt  pyibex_geometry.cpp  setup.py.in
python/pyibex_geometry/examples/: demo_catan2_ncurses.py
python/pyibex_geometry/tests/: test_Catan2.py  test_polar.py
src/: CMakeLists.txt  pyibex_geometry.cpp
src/polar/: ibex_CtcAngle.h  ibex_CtcPolar.cpp  ibex_CtcPolar.h
src/polygon/: ibex_CtcSegment.cpp  ibex_CtcSegment.h  ibex_PdcInPolygon.cpp  ibex_PdcInPolygon.h  ibex_SepPolygon.cpp  ibex_SepPolygon.h
tests/: CMakeLists.txt  TestCtcPixelMap.cpp  TestCtcSegment.cpp  setResult_06  setResult_07  test_Catan2.cpp  test_CtcSegment.cpp  test_SepPolygon.cpp  test_polar.cpp
tests/vibes/: vibes.h
